--- a/css/style.css
+++ b/css/style.css
@@ -542,20 +542,20 @@ body {
 }
 
 .testimonials .testimonial-text h3 {
-  font-size: 18px;
+  font-size: 2rem;
   font-weight: 700;
   margin-bottom: 10px;
 }
 
 .testimonials .testimonial-text h4 {
-  font-size: 12px;
+  font-size: 1rem;
   font-weight: 300;
   text-transform: uppercase;
 }
 
 .testimonials .testimonial-text p {
   margin: 0;
-  font-size: 16px;
+  font-size: 1.5rem;
   font-weight: 300;
 }
 
